
//String Definer;
public class BO_SD
{
    //Scene;
    public const string Scene_name = "BreakOut";
    //Object;
    public const string DC_name = "BO_DataController";
    public const string Ball_OBJ_name = "BO_Ball";
    //Animator;
    public const string AniNextStepTrigger_str = "NextStep";
    public const string AniL2RestartTrigger_str = "L2ReStart";
    public const string AniStartTrigger_str = "Start";
    public const string AniL2NextStepTrigger_str = "L2NextStep";
    public const string AniL2StartTrigger_str = "L2Start";
    public const string AniMode1Trigger_str = "Mode1";
    //Tags;
    public const string Brick_tag = "BO_Brick";

}
